Styled up the "Tick", wrapped all my scripts in "immediately invoked function expression" to prevent DOM pollution

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,12 @@ html {
   box-sizing: inherit;
 }
 
+html,
+body {
+    font-family: 'Roboto Condensed', sans-serif;
+    background: #e2e1e0;
+}
+
 .hero {
     padding: 1px 0;
     background-color: #2196F3;
@@ -39,7 +45,6 @@ table {
     tbody {
         td {
             text-align: right;
-            font-family: 'Inconsolata', monospace;
         }
         th {
             text-align: left;
@@ -51,6 +56,32 @@ table {
     }
 }
 
-#date {
-    font-family: 'Inconsolata', monospace;
+
+#today {
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+}
+
+
+.card {
+    padding: 10px;
+    background: #fff;
+    border-radius: 2px;
+    -webkit-transition: box-shadow ease-in-out 0.2s;
+         -o-transition: box-shadow ease-in-out 0.2s;
+            transition: box-shadow ease-in-out 0.2s;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.card:hover {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+
+.progress {
+    margin-bottom: 10px;
+    .progress-bar {
+        -webkit-transition: none;
+             -o-transition: none;
+                transition: none;
+    }
 }
